src/objects/TimeCard__c.object
<CustomObject>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change</label>
        <referenceTo>Change__c</referenceTo>
        <relationshipLabel>Time Cards</relationshipLabel>
        <relationshipName>Time_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>MProject__c</referenceTo>
        <relationshipLabel>Time Cards</relationshipLabel>
        <relationshipName>TimeCards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TeamMember__c</fullName>
        <label>Team Member</label>
        <referenceTo>TeamMember__c</referenceTo>
        <relationshipLabel>Time Cards</relationshipLabel>
        <relationshipName>Time_Cards</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Time Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{0000000}</displayFormat>
        <label>Time Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Time_Cards_On_Wrong_User</fullName>
        <active>true</active>
        <errorConditionFormula>AND( TeamMember__r.User__c !=  $User.Id ,
CONTAINS( $Profile.Name , &quot;Developer&quot;))</errorConditionFormula>
        <errorMessage>You cannot create time cards for other people.</errorMessage>
    </validationRules>
</CustomObject>